hud position absolute and fixed mobile jumping, mission results box adjusted for mobile, button classes for return, next and launch seperated

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   }
 
   .start-wrapper {
-    margin-top: 30px;
+    margin-top: 30px !important;
     justify-content: flex-start !important;
     align-items: center !important;
     flex-direction: column !important;
@@ -15,17 +15,19 @@
 
 
   .hud {
+    position: absolute !important;
+    top: 25rem !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
     flex-direction: column !important;
-    margin: 0px !important;
-    gap: 0px !important;
-    padding: 0px !important;
   }
 
   .hud-mission {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: absolute !important;
+    display: flex !important;;
+    align-items: center !important;;
+    justify-content: center !important;;
     flex-direction: column !important;
     top: 26rem !important;
   }
@@ -63,10 +65,23 @@
   }
 
   .mission-results-box {
+    position: absolute !important;
+    top: 2rem !important;
     height: 32vh !important;
     width: 70vw !important;
     font-size: 1.2rem !important;
     gap: 3px !important;
+    margin-bottom: 50px !important;
+  }
+
+  .mission-next {
+    position: absolute !important;
+    top: 20rem !important;
+  }
+
+  .return-btn {
+    position: absolute !important;
+    top: 20rem !important;
   }
 
   .intro-btn {
@@ -311,9 +326,12 @@
 }
 
 .hud {
+  position: absolute;
+  top: 30rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
 }
 
 .credits-bar {
@@ -564,19 +582,19 @@
 }
 
 .planet-name-text {
-    display: flex;
-    justify-content: center;
-    margin-left: 200px;
-    margin-right: 200px;
-    width: 70vw;
-    font-family: monospace;
-    font-size: 1.875rem;
-    border-radius: 7%;
-    cursor: pointer;
-    margin: 10px;
-    text-decoration: none;
-    color: rgb(5, 255, 38);
-    opacity: 80%;
+  display: flex;
+  justify-content: center;
+  margin-left: 200px;
+  margin-right: 200px;
+  width: 70vw;
+  font-family: monospace;
+  font-size: 1.875rem;
+  border-radius: 7%;
+  cursor: pointer;
+  margin: 10px;
+  text-decoration: none;
+  color: rgb(5, 255, 38);
+  opacity: 80%;
 }
 
 .mission-briefing-container {
@@ -657,4 +675,43 @@
 
 #restart-btn:hover {
   background-color: aquamarine;
+}
+
+.mission-next {
+  padding: 0.625rem 1.875rem;
+  background-color: rgb(5, 255, 38);
+  font-family: monospace;
+  font-size: 1.375rem;
+  border-radius: 7%;
+  cursor: pointer;
+  margin: 10px;
+  text-decoration: none;
+  color: black;
+  border: 1px solid white;
+}
+
+.return-btn {
+  padding: 0.625rem 1.875rem;
+  background-color: rgb(5, 255, 38);
+  font-family: monospace;
+  font-size: 1.375rem;
+  border-radius: 7%;
+  cursor: pointer;
+  margin: 10px;
+  text-decoration: none;
+  color: black;
+  border: 1px solid white;
+}
+
+.launch-btn {
+  padding: 0.625rem 1.875rem;
+  background-color: rgb(5, 255, 38);
+  font-family: monospace;
+  font-size: 1.375rem;
+  border-radius: 7%;
+  cursor: pointer;
+  margin: 5px;
+  text-decoration: none;
+  color: black;
+  border: 1px solid white;
 }
